# competitive-parking-simulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  docs.md
inc/GL/: glew.h  wglew.h
inc/PhysX/: PxRigidActor.h  PxRigidBody.h
inc/PhysX/cooking/: PxCooking.h
inc/PhysX/foundation/: Px.h  PxSimpleTypes.h
inc/PhysX/vehicle/: PxVehicleUtil.h
inc/fmt/: format.h
lib/glew-2.2.0/: CMakeLists.txt  glew.c
lib/glfw-3.3.6/Debug/: glfw3.lib
lib/glfw-3.3.6/Release/: glfw3.lib
lib/imgui-1.78/: CMakeLists.txt
lib/libsndfile-1.0.31/: sndfile.lib
lib/libsndfile-1.0.31/Release/: sndfile.lib
lib/openal-soft-1.21.1/Debug/: OpenAL32.lib
lib/physx-4.1/Debug/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXTask_static_64.lib  SampleFramework_static_64.lib  SamplesToolkit_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
lib/physx-4.1/Release/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
physx_snippet_code/: SnippetPVD.h.ignore  SnippetPrint.c.ignore  SnippetUtils.h.ignore  SnippetVehicle4W.cpp.ignore
res/modelTransformations/: aiNodeLocation.txt  curbLocation.txt  curbRotation.txt  emptySpotSubsetLocation.txt  emptySpotSubsetRotation.txt  hedgeLocation.txt  hedgeRotation.txt  malllampLocation.txt  malllampRotation.txt  metalfenceLocation.txt  metalfenceRotation.txt  parkingLinesLocation.txt  parkingLinesRotation.txt  parkingSpotLocation.txt  parkingSpotRotation.txt  rampLocation.txt  rampRotation.txt  roadLocation.txt  spawnPointLocation.txt  spawnPointRotation.txt  speedbumpLocation.txt  speedbumpRotation.txt  streetlightLocation.txt  streetlightRotation.txt  treeLocation.txt  warningWallLocation.txt  warningWallRotation.txt  woodfenceLocation.txt  woodfencePoleLocation.txt  woodfencePoleRotation.txt  woodfenceRotation.txt
res/models/: Rock1.mtl  Test1.mtl  Test2_M.mtl  car1.mtl  car1wheel.mtl  car2.mtl  car2chassis.mtl  car3.mtl  car4.mtl  cpsMap_BGGrass.mtl  cpsMap_BGRoad.mtl  cpsMap_BWall2.mtl  cpsMap_Curb.mtl  cpsMap_Hedge.mtl  cpsMap_Mall.mtl  cpsMap_MallLamp.mtl  cpsMap_MallText.mtl  cpsMap_MetalFence.mtl  cpsMap_PLotPlane.mtl  cpsMap_ParkingIndicator.mtl  cpsMap_ParkingLine.mtl  cpsMap_Ramp.mtl  cpsMap_Ramp2.mtl  cpsMap_Speedbump.mtl  cpsMap_Streetlight.mtl  cpsMap_TreeStump.mtl  cpsMap_WarningWall.mtl  cpsMap_Woodfence.mtl  gamemapBoundaryFence.mtl  gamemapBrickWall1.mtl  gamemapBrickWall4.mtl  gamemapGrassPlane.mtl  gamemapParkGuide.mtl  gamemapParkingLines.mtl  gamemapRoad.mtl  gamemapWholeMap.mtl  parkingstall.mtl  sedan.mtl  smileplane.mtl  truck.mtl
res/scripts/: calculateEngineSound.lua  vehicleTuning.lua
res/shaders/: DeferredShading.vert  MainCamera.frag  PostProcessingDeferredShading.frag  PostProcessingDeferredShading.vert  TransparentObject.frag  TransparentObject.vert  test.frag  test.vert
src/: Application.cpp  Application.h  CPSC-585-Project.vcxproj  Camera.cpp  Camera.h  Common.h  Component.cpp  Component.h  CubeMap.cpp  CubeMap.h  EditorCamera.cpp  EditorCamera.h  Entity.cpp  Entity.h  Event.cpp  Event.h  EventTypes.h  Framework.h  GLHandles.cpp  GLHandles.h  GUI.cpp  GUI.h  GameCallback.cpp  GameCallback.h  GameObject.h  GameSystem.h  GameplaySystem.cpp  GameplaySystem.h  Geometry.cpp  Geometry.h  GuiScene.cpp  GuiScene.h  InputCallbacks.cpp  InputManager.cpp  InputManager.h  Lighting.cpp  Lighting.h  Log.h  LuaScript.cpp  LuaScript.h  (+42 more)
src/audio/: Audio.cpp  Audio.h  AudioDevice.cpp  AudioDevice.h  AudioManager.cpp  AudioManager.h  AudioSettings.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  OpenALError.cpp  OpenALError.h
src/components/: AiComponent.cpp  AiComponent.h  AudioComponent.cpp  AudioComponent.h  BaseComponent.cpp  BaseComponent.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Components.h  ControllerComponent.cpp  ControllerComponent.h  DescriptionComponent.cpp  DescriptionComponent.h  Entity.cpp  Entity.h  LightingComponent.cpp  LightingComponent.h  ModelComponent.cpp  ModelComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RendererComponent.cpp  RendererComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  Scene.cpp  Scene.h  TransformComponent.cpp  TransformComponent.h  VehicleComponent.cpp  VehicleComponent.h  VolumeTriggerComponent.cpp  VolumeTriggerComponent.h
src/input/: CMakeLists.txt  ControlAxis.cpp  ControlAxis.h  InputCallbacks.cpp  InputCallbacks.h  InputSystem.cpp  InputSystem.h
src/physics/: CMakeLists.txt  PhysXCallbacks.cpp  PhysXCallbacks.h  PhysicsSystem.cpp  PhysicsSystem.h  SnippetCode.cpp  SnippetCode.h  SnippetVehicle4W.cpp  VehicleDesc.h  VehicleSceneQueryData.cpp  VehicleSceneQueryData.h  crapweactuallyneed.cpp  crapweactuallyneed.h
src/shaders/: DeferredShading.frag  DeferredShading.vert  DepthTexture.vert  EdgeDetection.frag  EdgeDetection.vert  MainCamera.frag  MainCamera.vert  PostProcessingDeferredShading.frag  test.frag
srcFiles/: Audio.h  AudioDevice.cpp  AudioDevice.h  AudioManager.cpp  AudioManager.h  AudioSource.h  CPSC-585-Project.vcxproj.filters  Camera.h  GameObject.cpp  GameObject.h  OpenALError.h  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
srcFiles/shaders/: MainCamera.frag  MainCamera.vert
